--- a/content/css/less/custom.less
+++ b/content/css/less/custom.less
@@ -55,7 +55,7 @@ div.site-subheader{
 
 
 .home-slider{
-  margin-top:24px;
+  margin-top:30px;
 }
 
 .whatisir p{
@@ -63,7 +63,7 @@ div.site-subheader{
   margin-top:7px;
 }
 .whatisir{
-  margin-top:14px;
+  margin-top:21px;
   margin-bottom:14px;
 }
 
@@ -155,6 +155,19 @@ blockquote:before {
   color: #7a7a7a;
 }
 
+ul.quotations blockquote{
+  width:auto;
+}
+ul.quotations blockquote cite{
+  display:block;
+  margin-top:0.5em;
+  font-weight:bold;
+}
+ul.quotations blockquote cite span{
+  font-weight:normal;
+}
+
+
 .discovery-main{ display: none !important;}
 
 span.imagespacer{
@@ -162,4 +175,11 @@ span.imagespacer{
   display:inline-block;
 }
 
+.flexslider .slides .row img{
+  display:inline-block;
+  width:auto;
+}
+.flexslider .slides > li {
+  height:390px;
+}
 
