Added demo page for InCreo

--- a/content/docs/benefits/sidebar.slim
+++ b/content/docs/benefits/sidebar.slim
@@ -11,4 +11,4 @@ ul.star_list
   li: a href="/docs/benefits/testimonials" Read testimonials
 h2 From our users
 ul.star_list
-  li: a href="/docs/benefits/cases/acme" Acme Corporation
+  li: a href="/docs/benefits/cases/increo" InCreo
