Hide InCreo case study until it's ready for publication

--- a/content/docs/benefits/sidebar.slim
+++ b/content/docs/benefits/sidebar.slim
@@ -9,6 +9,6 @@ ul.star_list
   li: a href="/docs/benefits/comprehensive" Comprehensive
   li: a href="/docs/benefits/customers" Join a large and diverse user base
   li: a href="/docs/benefits/testimonials" Read testimonials
-h2 From our users
-ul.star_list
+/ h2 From our users
+/ ul.star_list
   li: a href="/docs/benefits/cases/increo" InCreo
