Added /pl alias for /plugins

--- a/content/plugins/index.slim
+++ b/content/plugins/index.slim
@@ -1,6 +1,6 @@
 Title: Plugins - Image Resizer
 Libs: ejunkie, ejunkiecart, uservoice, -comments
-Aliases: /pl.. /plugin
+Aliases: /pl.. /plugin /pl
 
 h1 Plugin Index
 
