Fix footer typo; hide home page banner on phones

--- a/content/_layout/footer.slim
+++ b/content/_layout/footer.slim
@@ -37,7 +37,7 @@ Layout: false
 
           It provides far more than image resizing; [with our 40+ plugins](/plugins), it becomes a **comprehensive media processing suite**.
 
-          Don't doom your site to inevitable instabiliy by [using flawed code from the internet](http://nathanaeljones.com/163/20-image-resizing-pitfalls/). Our core library is compact, free, and well-tested. `Install-Package ImageResizer`.
+          Don't doom your site to inevitable instability by [using flawed code from the internet](http://nathanaeljones.com/163/20-image-resizing-pitfalls/). Our core library is compact, free, and well-tested. `Install-Package ImageResizer`.
 
 
       .span4
