--- a/content/index.slim
+++ b/content/index.slim
@@ -8,7 +8,7 @@ h1 RESTful image processing
 
 == content_for :banner do
 
-  .container
+  .container.hidden-phone
     .slider
       #flex1.flexslider
         ul.slides
