--- a/content/_layout/footer.slim
+++ b/content/_layout/footer.slim
@@ -89,3 +89,6 @@ Layout: false
     .span12
       p
         | Copyright &copy; 2013 <a href="http://imazen.io">Imazen</a> and <a href="http://nathanaeljones.com">Nathanael Jones</a>
+      p 
+        markdown:
+          We're hiring! [Find out more at imazen.io/careers](http://imazen.io/careers)
