--- a/content/docs/community.slim
+++ b/content/docs/community.slim
@@ -88,8 +88,7 @@ h1 ImageResizer Community
       * [Greg Duncan, Channel 9: Funny, you look bigger in real life... Server side image resizing with the free and open source ImageResizer](http://channel9.msdn.com/coding4fun/blog/Funny-you-look-bigger-in-real-life-Server-side-image-resizing-with-the-free-and-open-source-ImageRes)
       * [Scott Hanselman: NuGet Package of the Week: ImageResizer](http://www.hanselman.com/blog/NuGetPackageOfWeek11ImageResizerEnablesCleanClearImageResizingInASPNET.aspx)
       * [Scott Hanselman (podcast): Deep inside image resizing and scaling with ASP.NET and IIS, with ImageResizing.net author Nathanael Jones](www.hanselminutes.com/313/deep-inside-image-resizing-and-scaling-with-aspnet-and-iis-with-imageresizingnet-author-na)
-      * [Ben Foster: FluentExtensions for ImageResizer](
-      http://ben.onfabrik.com/posts/image-resizer-fluent-extensions)
+      * [Ben Foster: FluentExtensions for ImageResizer](https://github.com/benfoster/ImageResizer.FluentExtensions)
       * [cskardon: Using ImageResizer on Azure 2.0](http://geekswithblogs.net/cskardon/archive/2013/02/26/imageresizer-azurereader2-and-wellhellip-azure-duh.aspx)
       * [Dave Gardner: Building a Gallery Module for Orchard with ImageResizer (7-part series!)](http://bigsitesdoneright.com/big-blog/orchard-cascade-gallery-tutorial-series)
       * [Frederik Vig: Add powerful image resizing, cropping and manipulation support to your EPiServer website](http://www.frederikvig.com/2013/01/add-powerful-image-resizing-cropping-and-manipulation-support-to-your-episerver-website/)
