Added note on licenses page - plugins will not be sold individually.

--- a/content/licenses/index.slim
+++ b/content/licenses/index.slim
@@ -207,7 +207,7 @@ h1 Licenses
 
       The enhanced editions are also *nearly* open-source. They all include source code and encourage modification. Patches are accepted through GitHub. Redistribution and sub-licensing rights vary by license, however. 
 
-      Every licenese has been written to provide maximum freedom, minimum restrictions, and maximum simplicity. 99% of use cases should be covered. If yours is not, e-mail **sales@imageresizing.net**.
+      Every licenese has been written to provide maximum freedom, minimum restrictions, and maximum simplicity. 99% of use cases should be covered. If yours is not, e-mail **sales@imageresizing.net**. Please note we will not sell plugins individually.
   .span4
     markdown:
       ## List of licenses
