Added FAQ with common questions on licenses page

--- a/content/licenses/index.slim
+++ b/content/licenses/index.slim
@@ -231,14 +231,23 @@ h1 Licenses
       [contribute]: /licenses/contribute  "Imazen Contributor Agreement"
   .span4
     markdown:
-      ## Is plugin X free?
+      ## FAQ
 
-       * If it is in the `ImageResizer.Plugins.Basic` namespace, it is under the [Freedom license](/licenses/freedom). 
-       * All sample source code is under the [Freedom license](/licenses/freedom).
-       * If it is part of `ImageResizer.dll` or `ImageResizer.Mvc.dll`, then it's under the [Freedom license](/licenses/freedom).
-       * If the dll is named `ImageResizer.Plugins.something.dll`, it's probably a [paid plugin](/plugins).
-       * This excludes `ImageResizer.Plugins.Logging.dll`, which is also under the [Freedom license](/licenses/freedom) and
-       *`ImageResizer.Plugins.PdfRenderer`, which is [under the GPL v3 due to its use of Ghostscript](/plugins/pdfrenderer).
+    dl
+      dt
+        | Q: Can I buy plugins individually?
+      dd No &mdash; they're designed to work together, and it would cause customer confusion and hassle.
+
+      dt
+        | Q: Can I upgrade from one license to another? 
+      dd 
+        | Our offline license keys can't be changed, which makes this impossible. We encourage you to select a license  appropriate for your future needs when possible.
+      dt 
+        | Q: What can I use for free?
+      dd 
+        markdown:
+          All 19 plugins in the [Essential Edition](/plugins/editions/essential) and all sample projects can be used under the [Freedom license](/licenses/freedom). Check your diagnostics page to verify you're not using any paid plugins, or verify you don't have any 'ImageResizer.Plugins.[pluginame].dll' files in `/bin`.
+
 
 
 
