--- a/content/download.slim
+++ b/content/download.slim
@@ -11,25 +11,17 @@ h1
 
 .row
   .span8
-
-    form method="post" action="https://app.icontact.com/icp/signup.php" name="icpsignup" id="icpsignup2612" accept-charset="UTF-8" onsubmit="return verifyRequired2612();"
+    form#signupform method="post" action="http://news.imazen.io/subscribe" accept-charset="UTF-8" onsubmit="return verifyRequired('signupform');"
       input type="hidden" name="redirect" value=latest_release.meta.fullfile
-      input type="hidden" name="errorredirect" value="http://www.icontact.com/www/signup/error.html"
-      h3 style="margin-bottom:0" Notify me when important updates are available
-      p style="margin-top:10px"
-        | Email: 
-        input type="text" name="fields_email"
-        |  &nbsp; 
-        button type="submit" name="Submit" class="btn btn-primary"
-          | Subscribe and Download V#{latest_release.meta.shortversion} (avg 8 per year)
-      
-      input type="hidden" name="listid" value="29803"
-      input type="hidden" name="specialid:29803" value="LH6H"
-      input type="hidden" name="clientid" value="905228"
-      input type="hidden" name="formid" value="2612"
-      input type="hidden" name="reallistid" value="1"
-      input type="hidden" name="doubleopt" value="0"
-
+      input type="hidden" name="list" value="9qAaYaDsCOem6WVY7jWnhA"
+      h3 style="margin-bottom:0" 
+        | Notify me when important updates are available
+        p style="margin-top:10px"
+          | Email: 
+          input type="text" name="email"
+          |  &nbsp; 
+          button type="submit" name="Submit" class="btn btn-primary"
+            | Subscribe and Download V#{latest_release.meta.shortversion} (avg 4 per year)
 
     p style="margin-top:10px;font-size:10px; color:gray;margin-bottom:0"
     	| If you've already subscribed, use this link instead:
