--- a/content/newsletter/signup.slim
+++ b/content/newsletter/signup.slim
@@ -4,13 +4,14 @@ h1 Signup
 
 
 markdown:
-  Average volume is less than 1 e-mail per month:
+  Average volume is less than 4 e-mails per year:
 
   * 2010: 4 e-mails sent
   * 2011: 8 e-mails sent
   * 2012: 11 e-mails sent
+  * 2013: 2 e-mails sent
 
-  You will only be e-mailed about important updates and notifications regarding the Image Resizer. I do not rent, share, or sell your info to anyone. I use iContact for managing the list, and they are very reliable.
+  You will only be e-mailed about important updates, news, and notifications regarding ImageResizer. I do not rent, share, or sell your info to anyone.
 
   You can unsubscribe at any time.
 
