Fix broken image on home page

--- a/content/index.slim
+++ b/content/index.slim
@@ -354,7 +354,7 @@ h1 RESTful image processing
 
 .bx-transparent
   ul.website-carousel
-    - websites = ["skybrud-dk-1","solidstockart-com-1","vevo-com-2","nextgenaero-com-1","msn-co-uk-1","airnewzealand-com-1","bilbasen-dk-3","bjarnhoff-com-1","strath-ac-uk-1","pilgrim-dk-1","yamaha-motor-eu-2","citrus-retail-com-1","homgroup-com-1","cloudnine-se-1","creuna-se-1","delabo-it-1","dotagency-co-uk-1","idea-hr-1","increo-no-3","tradera-com-1","unique-dk-1","valg.oim-dk-1","lewis-co-uk-1", "tradera-com-1","enferno-se-1"].map { |w| parse_domain(w) }
+    - websites = ["skybrud-dk-1","solidstockart-com-1","vevo-com-2","nextgenaero-com-1","msn-co-uk-1","airnewzealand-com-1","bilbasen-dk-3","bjarnhoff-com-1","strath-ac-uk-1","pilgrim-dk-1","yamaha-motor-eu-2","citrus-retail-com-1","homgroup-com-1","cloudnine-se-1","creuna-se-1","delabo-it-1","dotagency-co-uk-1","idea-hr-1","increo-no-3","tradera-com-1","unique-dk-1","valg-oim-dk-1","lewis-co-uk-1", "tradera-com-1","enferno-se-1"].map { |w| parse_domain(w) }
     - websites.each do |w|
       li
         img src="#{w.url}?width=200"
