bootstrap pricing tiers, feature chart and marketing text refactoring

--- a/content/css/less/custom.less
+++ b/content/css/less/custom.less
@@ -200,3 +200,19 @@ span.imagespacer{
 .flexslider .slides > li {
   background-color: #fafafa;
 }
+
+// table-features on contracts page, restyling basic bootstrap table
+
+.features-masthead {
+   text-align: center !important;   
+}
+.features-subhead {
+     text-align: left !important;   
+ }
+.table-features th, .table-features td { 
+     border-top: none; 
+ }
+.table-features td { 
+     text-align: center;
+ }
+
