--- a/content/download.slim
+++ b/content/download.slim
@@ -11,17 +11,17 @@ h1
 
 .row
   .span8
-    form#signupform method="post" action="http://news.imazen.io/subscribe" accept-charset="UTF-8" onsubmit="return verifyRequired('signupform');"
+    form#signupform.form-inline method="post" action="http://news.imazen.io/subscribe" accept-charset="UTF-8" onsubmit="return verifyRequired('signupform');"
       input type="hidden" name="redirect" value=latest_release.meta.fullfile
       input type="hidden" name="list" value="9qAaYaDsCOem6WVY7jWnhA"
       h3 style="margin-bottom:0" 
         | Notify me when important updates are available
         p style="margin-top:10px"
           | Email: 
-          input type="text" name="email"
+          input type="text" name="email" placeholder="name@domain.com"
           |  &nbsp; 
           button type="submit" name="Submit" class="btn btn-primary"
-            | Subscribe and Download V#{latest_release.meta.shortversion} (avg 4 per year)
+            | Subscribe and Download V#{latest_release.meta.shortversion} (avg 4 per year) &raquo;
 
     p style="margin-top:10px;font-size:10px; color:gray;margin-bottom:0"
     	| If you've already subscribed, use this link instead:
