--- a/content/plugins/prettygifs.slim
+++ b/content/plugins/prettygifs.slim
@@ -102,7 +102,7 @@ a href="http://members.ozemail.com.au/~dekker/NEUQUANT.HTML"
 p
   a id="note1"
     | [1]
-  | : Default GIF: .NET Default GIF behaviour simulated with the 216 color web pallette in Adobe PhotoShop
+  | : Default GIF: .NET Default GIF behaviour simulated with the 216 color web pallette in Adobe Photoshop. Results may differ depending upon your operating system. Pre-2009 versions of windows use a fixed pallette, while WS2008R2 and later use a different (although still poor) quantization system. 
 p
   a id="note2"
     | [2]
