--- a/content/plugins/whitespacetrimmer.slim
+++ b/content/plugins/whitespacetrimmer.slim
@@ -8,7 +8,7 @@ Icon: cogs
 
 h1 WhitespaceTrimmer plugin
 p 
-  | Trims whitespace (even smooth gradients) from around images automatically using edge detection filters. Requires Full Trust, uses unmanaged code.69
+  | Trims whitespace (even smooth gradients) from around images automatically using edge detection filters. Requires Full Trust, uses unmanaged code.
 
 - image_width = 900
 - cache_buster = 00023
